Added mongoose to our project
