# swagger.json
@@ -5,15 +5,22 @@
     "description": "Contacts API",
     "version": "1.0.0"
   },
-  "host": "personal-assignment-service.onrender.com",
+  "host": "localhost:3000",
   "basePath": "/",
   "schemes": [
+    "http",
     "https"
   ],
   "paths": {
+    "/api-docs": {
+      "get": {
+        "description": "",
+        "parameters": [],
+        "responses": {}
+      }
+    },
     "/contacts/": {
       "get": {
-        "tags": ["Contacts"],
         "description": "",
         "parameters": [],
         "responses": {
@@ -26,7 +33,6 @@
         }
       },
       "post": {
-        "tags": ["Contacts"],
         "description": "",
         "parameters": [
           {
@@ -64,13 +70,12 @@
         }
       }
     },
-    "/contacts/{id}": {
+    "/contacts/{firstName}": {
       "get": {
-        "tags": ["Contacts"],
         "description": "",
         "parameters": [
           {
-            "name": "id",
+            "name": "firstName",
             "in": "path",
             "required": true,
             "type": "string"
@@ -80,16 +85,14 @@
           "200": {
             "description": "OK"
           },
-          "404": {
-            "description": "Not Found"
-          },
           "500": {
             "description": "Internal Server Error"
           }
         }
-      },
+      }
+    },
+    "/contacts/{id}": {
       "put": {
-        "tags": ["Contacts"],
         "description": "",
         "parameters": [
           {
@@ -124,8 +127,11 @@
           }
         ],
         "responses": {
-          "204": {
-            "description": "No Content"
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
           },
           "500": {
             "description": "Internal Server Error"
@@ -133,7 +139,6 @@
         }
       },
       "delete": {
-        "tags": ["Contacts"],
         "description": "",
         "parameters": [
           {
@@ -146,6 +151,9 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
           },
           "500": {
             "description": "Internal Server Error"
